tools/crates/vendor/toml_edit/tests/fixtures/invalid/inline-table/linebreak-3.stderr
TOML parse error at line 1, column 9
  |
1 | t = {a=1
  |         ^
invalid inline table
expected `}`
